cpp/test/Slice/errorDetection/OperationRedefinition.err
OperationRedefinition.ice:14 error: redefinition of operation `operation'
