cpp/test/Slice/errorDetection/OperationRedefinition.ice
// **********************************************************************
//
// Copyright (c) 2001
// Mutable Realms, Inc.
// Huntsville, AL, USA
//
// All Rights Reserved
//
// **********************************************************************

class C
{
    void operation();
    void operation();
    long l;
};
